objects/IntegrationConfigruration__mdt.object
<CustomObject>
    <fields>
        <fullName>MasterdataMetadataClient__c</fullName>
        <label>MasterdataMetadataClient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterdataMetadataSecret__c</fullName>
        <label>MasterdataMetadataSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterdataMetadataUrl__c</fullName>
        <label>MasterdataMetadataUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntegrationConfigruration</label>
    <pluralLabel>IntegrationConfigrurations</pluralLabel>
</CustomObject>